# lvaloda

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: audio.py  chat.py  errors.py  exam.py  minimal_pairs.py  phrases.py  picture.py  prep.py  reading.py  reflection.py  scenarios.py  shadowing.py  stats.py  translate.py  words.py
backend/app/assets/: minimal_pairs.py  pictures.py  reading_review.log.json  reading_texts.py  top_phrases.py
backend/app/auth/: telegram.py
backend/app/bot/: handlers.py  scheduler.py
backend/app/db/: models.py  session.py
backend/app/llm/: audio.py  chat.py  client.py  prompts.py  scenarios.py
backend/app/services/: retrieval_service.py  stats_service.py  unnatural_service.py
deploy/nginx/: lvaloda.taras.marblecake.fun.conf
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  cloud.ts  main.tsx  styles.css  tg.ts
frontend/src/components/: InputBar.tsx  SaveWordSheet.tsx
frontend/src/hooks/: useEdgeBackSwipe.ts  useRecorder.ts  useSwipe.ts
frontend/src/screens/: Chat.tsx  Exam.tsx  Home.tsx  MinimalPairs.tsx  Phrases.tsx  Picture.tsx  Prep.tsx  Reading.tsx  ReadingPicker.tsx  Reflection.tsx  ScenarioPicker.tsx  Scenarios.tsx  Shadowing.tsx  ShadowingPicker.tsx  Stats.tsx  Translate.tsx  (+1 more)
scripts/: _reading_io.py  expand_reading_texts.py  generate_reading_texts.py  review_reading_texts.py
